fix: define background color and textcolor of disabled textareas for better readability

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -38,5 +38,8 @@
     border-radius: 5px;
 }
 
-
+textarea.form-control:disabled {
+	background-color: white;
+	color: #607d8b;
+}
 
